@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.97 2007-09-28 23:47:59 cmatsuoka Exp $
+$Id: ChangeLog,v 1.98 2007-09-29 13:12:25 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -25,6 +25,8 @@ Stable versions
 	- fixed driver detection in NetBSD (don't try to build OSS driver)
 	- fixed crash when restart value is invalid (reported by Ralf Hoffmann)
 	- fixed handling of S3M pattern 0xfe (reported by Ralf Hoffmann)
+	- fixed MMD3 pattern sequence loading
+	- fixed MMD1/MMD3 effect translation
 	- format management code cleanup
 	- prowizard code cleanup
 
